# exorcists

./: .env  .gitignore  CMakeLists.txt  Makefile  README.md  exorcist.c  exorcist.h  log.c  log.h  main.c  main.h  message.c  message.h  request_handlers.c  request_handlers.h  setup.c  setup.h  state.h  state_handlers.c  state_handlers.h  utils.c  utils.h
prototype/: go.mod  log.go  main.go  message.go  requestHandlers.go  state.go  stateHandlers.go  types.go
